apply plugin: 'com.android.application'
apply plugin: 'dagger.hilt.android.plugin'

// 从 keystore.properties 读取签名配置（安全做法）
def keystorePropertiesFile = rootProject.file("keystore.properties")
def keystoreProperties = new Properties()
if (keystorePropertiesFile.exists()) {
    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
}

android {
    namespace 'com.batteryhealth.app'
    compileSdk 36
    buildToolsVersion '36.0.0'

    defaultConfig {
        applicationId "com.batteryhealth.app"
        minSdk 24
        targetSdk 36
        versionCode 60
        versionName "5.0.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // 性能优化配置
        resConfigs "zh"

        // 仅支持ARM架构，减少APK体积；同时启用16KB页面大小支持（Android 16要求）
        ndk {
            abiFilters 'armeabi-v7a', 'arm64-v8a'
        }
        externalNativeBuild {
            cmake {
                // 预留：若后续接入NDK库，需传递16KB page size参数
                // arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
            }
        }
    }

    // 签名配置 - 从 keystore.properties 读取；若文件不存在或 keystore 文件无效则回退到 debug 签名
    // 仅用于本地编译验证，正式发版前必须提供真实的 keystore.properties
    signingConfigs {
        release {
            def storeFilePath = keystoreProperties['storeFile'] ?: 'release-keystore.jks'
            def releaseStoreFile = rootProject.file(storeFilePath)
            if (keystorePropertiesFile.exists() && releaseStoreFile.exists()) {
                storeFile releaseStoreFile
                storePassword keystoreProperties['storePassword'] ?: ''
                keyAlias keystoreProperties['keyAlias'] ?: ''
                keyPassword keystoreProperties['keyPassword'] ?: ''
            } else {
                if (!keystorePropertiesFile.exists()) {
                    println "Warning: keystore.properties not found, release signing falls back to debug keystore."
                } else if (!releaseStoreFile.exists()) {
                    println "Warning: release keystore file not found at ${releaseStoreFile.absolutePath}, release signing falls back to debug keystore."
                }
                storeFile android.signingConfigs.debug.storeFile
                storePassword android.signingConfigs.debug.storePassword
                keyAlias android.signingConfigs.debug.keyAlias
                keyPassword android.signingConfigs.debug.keyPassword
            }
        }
        debug {
            // Debug 使用默认调试签名
        }
    }

    buildTypes {
        release {
            // 启用混淆和资源压缩，减小 APK 体积并提升安全性
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            debuggable false
            signingConfig signingConfigs.release
            // Release构建优化：移除无用资源、压缩代码
            crunchPngs true
            zipAlignEnabled true
        }

        debug {
            minifyEnabled false
            debuggable true
            signingConfig signingConfigs.debug
        }
    }

    lintOptions {
        abortOnError false
        checkReleaseBuilds true
        // Release构建时检查关键问题
        fatal 'NewApi', 'InlinedApi'
        warning 'UnusedResources', 'HardcodedText'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    // 禁用JDK镜像转换
    tasks.withType(JavaCompile) {
        options.fork = false
    }

    buildFeatures {
        viewBinding true
        buildConfig true
    }

    // 打包选项
    packagingOptions {
        pickFirst '**/libc++_shared.so'
        pickFirst '**/libjsc.so'
        // Android 16 要求所有 .so 文件按 16KB 边界对齐
        jniLibs.useLegacyPackaging = false
        // 排除重复/无用文件
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
    }
}

dependencies {
    // AndroidX核心库 - 升级到适配 Android 16 (SDK 36) 的最新匹配稳定版本
    implementation 'androidx.core:core:1.16.0'
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.8.7'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.8.7'
    implementation 'androidx.navigation:navigation-fragment:2.8.9'
    implementation 'androidx.navigation:navigation-ui:2.8.9'
    implementation 'androidx.viewpager2:viewpager2:1.1.0'
    implementation 'androidx.activity:activity:1.10.0'

    // 图表库 - 用于数据可视化
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    // 动画库
    implementation 'com.airbnb.android:lottie:6.7.1'

    // 图片加载
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'

    // 网络请求 (用于查询激活日期与云端机型数据库)
    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
    implementation('com.squareup.retrofit2:converter-gson:2.11.0') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }
    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'

    // Room数据库 (用于历史数据存储)
    implementation 'androidx.room:room-runtime:2.6.1'
    annotationProcessor 'androidx.room:room-compiler:2.6.1'

    // SQLCipher 数据库加密
    implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
    implementation 'androidx.sqlite:sqlite:2.4.0'

    // EncryptedSharedPreferences 安全存储加密密钥
    implementation 'androidx.security:security-crypto:1.1.0-alpha06'

    // Gson
    implementation 'com.google.code.gson:gson:2.13.2'

    // 权限管理
    implementation 'com.guolindev.permissionx:permissionx:1.8.1'

    // Hilt依赖注入
    implementation 'com.google.dagger:hilt-android:2.56'
    annotationProcessor 'com.google.dagger:hilt-compiler:2.56'

    // WorkManager
    implementation 'androidx.work:work-runtime:2.9.1'

    // 测试依赖
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}
